# weather

./: .gitignore  NextSteps.md  README.md  pyproject.toml
.cursor/: hooks.json.example  ruff-after-file-edit.py  ruff-check-edited.py
.cursor/rules/: compound_engineering.mdc  cursor_instructions.mdc  shell_and_environment.mdc
.cursor/skills/ce-compound/: SKILL.md
.cursor/skills/ce-plan/: SKILL.md
.cursor/skills/ce-work/: SKILL.md
.github/: copilot-instructions.md
config/: pipeline.yaml
docs/: ai_assisted_development.md
docs/brainstorms/: _template.md
docs/plans/: _template.md
docs/solutions/: _template.md
src/: logging_config.py  runner.py
src/tasks/: __init__.py  base.py  registry.py
src/tasks/export/: weather_parquet.py
src/tasks/ingest/: callAPI.py  weather_api.py
temp/rules/: shell_and_environment.mdc
tests/: helpers.py
tests/tasks/: test_weather_parquet_live.py  test_weather_parquet_task.py  test_weather_task.py  test_weather_task_live.py
