[project]
name = "data-pipeline"
version = "0.1.0"
description = "Config-driven task runner for processing data"
authors = [{ name = "Your Name" }]
requires-python = ">=3.11"

dependencies = [
    "pyyaml>=6.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
