[project]
name = "data-pipeline"
version = "0.1.0"
description = "Config-driven task runner for processing data"
authors = [{ name = "Your Name" }]
requires-python = ">=3.11"

dependencies = [
    "pyyaml>=6.0",
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
]
lint = [
    "pre-commit~=4.0.0",
    "ruff~=0.8.0",
]
test = [
    "pytest~=7.4.0",
    "pytest-mock~=3.14.0",
]

[tool.uv]
preview = true
package = false

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ty.src]
include = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-m 'not live_api'"
markers = [
    "live_api: calls real external APIs; opt in with -m live_api",
]
